--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a
           href="https://www.w3schools.com/cssref/pr_class_position.asp"
           target="_blank"
-          >Dido e basi pi4a</a
+          >CSS position Property</a
         >
       </h1>
       <table>
@@ -50,7 +50,7 @@
           <td class="tag">position: fixed</td>
           <td class="name">fixed</td>
           <td class="desc">
-            The element is positioned relative to the browser window.
+            Dido e basi pi4a!
           </td>
         </tr>
         <tr>
