--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <td class="tag">position: fixed</td>
           <td class="name">fixed</td>
           <td class="desc">
-            Dido e basi pi4a!
+            The element is positioned relative to the browser window.
           </td>
         </tr>
         <tr>
